添加了自由绘图模式以及移动圆形的绘制

--- a/lab1/lab1.vcxproj
+++ b/lab1/lab1.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="color.cpp" />
     <ClCompile Include="Coordinate.cpp" />
     <ClCompile Include="controller.cpp" />
     <ClCompile Include="main.cpp" />
