--- a/lab1/lab1.vcxproj.filters
+++ b/lab1/lab1.vcxproj.filters
@@ -48,4 +48,9 @@
   <ItemGroup>
     <None Include="cpp.hint" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="figure.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
